# GhostPages

./: ARCHITECTURE.md  BOUNDARY_AUDIT.md  CHANGELOG.md  Cargo.toml  DETERMINISM.md  DISK_SIM_PARITY.md  DISK_TIER_CONTRACT.md  EVENT_ORDERING_CONTRACT.md  PHASE25_AUDIT.md  README.md  SPEC.md  STATE_OWNERSHIP.md
.github/workflows/: ci.yml
benches/: allocator_stress.rs  chunk_throughput.rs  compression_throughput.rs  ram_backend.rs
crates/ghost-bench/: Cargo.toml
crates/ghost-bench/src/: comparison.rs  experiment.rs  leaderboard.rs  lib.rs  report.rs  runner.rs  workload.rs
crates/ghost-bench/tests/: integration.rs
crates/ghost-cli/: Cargo.toml
crates/ghost-cli/src/: commands.rs  lib.rs  main.rs
crates/ghost-compress/: Cargo.toml
crates/ghost-compress/src/: engine.rs  lib.rs
crates/ghost-core/: Cargo.toml
crates/ghost-core/src/: dma_pipeline.rs  emitter.rs  error.rs  event_multiplexer.rs  events.rs  hardware.rs  hotness.rs  hotness_confidence.rs  hotness_history.rs  hotness_provider.rs  hotness_summary.rs  invariant_registry.md  invariant_registry.rs  io_abstraction.rs  io_events.rs  lib.rs  state.rs  state_ownership.rs  time.rs  trace.rs  tracing_bridge.rs  transfer.rs  types.rs
crates/ghost-core/tests/: event_ordering.rs  hardware_abstraction.rs  hotness_model.rs  invariant_registry.rs  io_determinism.rs  io_invariants.rs
crates/ghost-daemon/: Cargo.toml  SUBSYSTEMS.md
crates/ghost-daemon/src/: backpressure.rs  config.rs  diagnostics.rs  engine.rs  exporter.rs  health.rs  hotness_tracker.rs  io_metrics.rs  ipc_server.rs  lib.rs  main.rs  metrics.rs  migration.rs  orchestrator.rs  pipeline.rs  pressure.rs  queue.rs  retry.rs  scheduler.rs  trace_log.rs  transfer_worker.rs  worker.rs
crates/ghost-daemon/tests/: autonomous_migration.rs  determinism_equivalence.rs  disk_replay.rs  event_completeness.rs  event_replay_equivalence.rs  hotness_state.rs  invariant_validation.rs  io_pressure.rs  observability.rs  observability_normalization.rs  phase2_integration.rs  physical_migration.rs  runtime_coherence.rs  state_ownership.rs  subsystem_boundaries.rs  test_concurrent_workloads.rs  test_failure_recovery.rs  test_ipc_roundtrip.rs  test_migration.rs  test_pressure_driven_migration.rs  test_replay.rs  test_store_retrieve.rs
crates/ghost-evaluator/: Cargo.toml
crates/ghost-evaluator/src/: adaptive.rs  baseline.rs  evaluator_metrics.rs  explanation.rs  lib.rs  lifecycle.rs  quality.rs  replay_analytics.rs  scoring.rs  stability.rs  tournament.rs
crates/ghost-evaluator/tests/: integration.rs
crates/ghost-ipc/: Cargo.toml
crates/ghost-ipc/src/: client.rs  frame.rs  lib.rs  protocol.rs  server.rs
crates/ghost-linux/: Cargo.toml
crates/ghost-linux/src/: cooldown.rs  damon.rs  hotness_provider.rs  lib.rs  meminfo.rs  policy.rs  policy_rules.rs  psi.rs  recorder.rs  replayer.rs  scanner.rs  stability.rs  swaps.rs  tier_inventory.rs  vmstat.rs  zram.rs
crates/ghost-linux/tests/: damon.rs  damon_integration.rs  damon_replay.rs  damon_stress.rs  e2e_replay.rs  hotness_provider.rs  integration.rs  memory_stats.rs  policy.rs  policy_hotness.rs  psi.rs  stability.rs  swaps.rs  tier_inventory.rs  zram.rs
crates/ghost-linux/tests/fixtures/: mod.rs
crates/ghost-metrics/: Cargo.toml
crates/ghost-metrics/src/: allocator.rs  collector.rs  event_bridge.rs  health.rs  hotness.rs  lib.rs  migration.rs  policy.rs  prometheus.rs  queue.rs  registry.rs  replay.rs  stability.rs  tracing.rs
crates/ghost-metrics/tests/: hotness_metrics.rs
crates/ghost-policy/: Cargo.toml
crates/ghost-policy/src/: lib.rs  lru.rs  policy.rs  pressure.rs  weights.rs
crates/ghost-replay/: Cargo.toml
crates/ghost-replay/src/: checksum.rs  divergence.rs  engine.rs  event.rs  export.rs  format.rs  invariants.rs  lib.rs  metrics.rs  proof.rs  reader.rs  recorder.rs  replayer.rs  state_reconstructor.rs  verifier.rs  writer.rs
crates/ghost-replay/tests/: cross_domain.rs
crates/ghost-sim/: Cargo.toml
crates/ghost-sim/src/: config.rs  lib.rs  metrics.rs  simulation.rs
crates/ghost-sim/tests/: sim_stress.rs
crates/ghost-tier/: Cargo.toml
crates/ghost-tier/src/: backend.rs  disk.rs  disk_config.rs  disk_persistence.rs  lib.rs  ram.rs  sim_backend.rs  sim_config.rs  sim_metrics.rs  tracker.rs
crates/ghost-tier/tests/: allocator_properties.proptest-regressions  allocator_properties.rs  allocator_storm.rs  backend_parity.rs  disk_sim_parity.rs
crates/ghost-vulkan/: Cargo.toml
crates/ghost-vulkan/src/: backend.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chunk_idempotent.rs  chunk_roundtrip.rs  compression_roundtrip.rs  fuzz_allocation_metadata.rs  fuzz_ipc_frames.rs  fuzz_migration_sequences.rs  fuzz_replay_records.rs
