# GhostPages Workspace
# Heterogeneous memory-tiering system for Linux

[workspace]
members = [
    "crates/ghost-core",
    "crates/ghost-daemon",
    "crates/ghost-ipc",
    "crates/ghost-tier",
    "crates/ghost-vulkan",
    "crates/ghost-sim",
    "crates/ghost-policy",
    "crates/ghost-compress",
    "crates/ghost-metrics",
    "crates/ghost-replay",
    "crates/ghost-cli",
]

exclude = ["fuzz"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["GhostPages Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghostpages/ghostpages"
description = "Experimental heterogeneous memory-tiering system for Linux"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

# HTTP server (metrics exporter)
axum = "0.7"

# Compression
zstd = "0.13"

# Content hashing (ChunkId)
blake3 = "1.5"

# Vulkan (primary GPU backend)
ash = "0.38"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
crossbeam = "0.8"
hex = "0.4"
num_cpus = "1"
rand = "0.8"

# Async trait
async-trait = "0.1"

# Testing
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
tempfile = "3"

# Fuzzing
libfuzzer-sys = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
