[package]
name = "ghost-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tools for interacting with GhostPages daemon"

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-ipc = { path = "../ghost-ipc" }
ghost-linux = { path = "../ghost-linux" }
ghost-evaluator = { path = "../ghost-evaluator" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde_json.workspace = true
hex.workspace = true
ghost-replay = { path = "../ghost-replay" }
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
