[package]
name = "ghost-compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ghost-core = { path = "../ghost-core" }
zstd = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
zstd-sys = "=2.0.16"

[dev-dependencies]
proptest = { workspace = true }
