[package]
name = "ghost-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[features]
deterministic = []
runtime-invariants = []
enforce-state-ownership = []

[dev-dependencies]
proptest = { workspace = true }
serde_json = "1"
