[package]
name = "ghost-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Main daemon process for GhostPages"

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-tier = { path = "../ghost-tier" }
ghost-policy = { path = "../ghost-policy" }
ghost-compress = { path = "../ghost-compress" }
ghost-metrics = { path = "../ghost-metrics" }
ghost-ipc = { path = "../ghost-ipc" }
ghost-replay = { path = "../ghost-replay" }
ghost-sim = { path = "../ghost-sim" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
axum.workspace = true
prometheus.workspace = true

[features]
deterministic = []
runtime-invariants = ["ghost-core/runtime-invariants"]
enforce-state-ownership = ["ghost-core/enforce-state-ownership"]

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
