[package]
name = "ghost-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ghost-core = { path = "../ghost-core" }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
ghost-daemon = { path = "../ghost-daemon" }
