[package]
name = "ghost-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ghost-core = { path = "../ghost-core" }
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
