[package]
name = "ghost-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Placement policy trait and implementations for GhostPages"

[dependencies]
ghost-core = { path = "../ghost-core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
