[package]
name = "ghost-replay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Trace recording and replay system for GhostPages"

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-metrics = { path = "../ghost-metrics" }
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "rt-multi-thread", "io-util"] }
tracing.workspace = true
crc32fast = "1.3"
csv = "1"

[dev-dependencies]
tempfile.workspace = true
