[package]
name = "ghost-tier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage backend trait and tier implementations for GhostPages"

[features]
# Enable allocation tracking for debugging and stress testing.
# When enabled, RamBackend records every allocation/deallocation.
track-allocations = []

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-compress = { path = "../ghost-compress" }
blake3.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
bytes.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha = "0.3"
