[package]
name = "ghost-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Vulkan VRAM backend for GhostPages"

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-tier = { path = "../ghost-tier" }
ghost-metrics = { path = "../ghost-metrics" }
ash.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
